[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "iop>=0.0.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "telegram>=0.0.1",
]
